# electronic_network

./: .gitignore  Dockerfile  README.md  coverage_report.txt  docker-compose.yaml  pyproject.toml
config/: settings.py  urls.py
networks/: admin.py  models.py  pagination.py  serializers.py  tests.py  urls.py  validators.py  views.py
networks/fixtures/: contacts_fixtures.json  networks_fixtures.json  products_fixtures.json
networks/migrations/: 0001_initial.py  0002_alter_contacts_department.py
users/: admin.py  permissions.py
users/management/commands/: csu.py
